Implemented Graph API.
